
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btZoomIn"
        android:id="@+id/button6"
        android:onClick="zoomIn"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btZoomOut"
        android:id="@+id/button7"
        android:onClick="zoomOut"
        android:layout_alignBottom="@+id/button6"
        android:layout_toEndOf="@+id/button6" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:id="@+id/map"
    tools:context="com.example.dima.intentssample.MapsActivity"
    android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btUnic"
        android:id="@+id/button8"
        android:layout_alignBottom="@+id/button7"
        android:layout_toEndOf="@+id/button7"
        android:onClick="goUnic"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btRSquare"
        android:id="@+id/button9"
        android:layout_alignTop="@+id/map"
        android:layout_toEndOf="@+id/button8"
        android:onClick="goRedSquare"/>

</RelativeLayout>