<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:id="@+id/button"
        android:onClick="nextPage"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="107dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button4"
        android:layout_alignTop="@+id/button3"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_maps"
        android:id="@+id/button5"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/button"
        android:onClick="showMaps"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btNavUnic"
        android:id="@+id/button10"
        android:layout_below="@+id/button5"
        android:layout_toEndOf="@+id/button3"
        android:layout_marginTop="59dp"
        android:onClick="navUnic"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maps2"
        android:id="@+id/button11"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button5"
        android:layout_marginStart="35dp"
        android:onClick="goMaps2"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button12"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/button5" />
</RelativeLayout>
